# directory-model

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
example/: paths.yml
src/directory_model/: __init__.py  __main__.py  cli.py  config.py  directory_model.py  path_model.py  utils.py  validators.py
