[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "directory_model"
version = "0.1.0"
description = "Combines pydantic and pathlib.Path to directory contents or references against a schema with yaml."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Michael Kane", email = "thisismikekane@gmail.com" }]
dependencies = [
    "pydantic>=1.10",
    "typer>=0.4.0",
    "rich",
    "PyYAML",
    "Jinja2",
    "python-dotenv",
    "loguru",
    "typing_extensions"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thisismikekane/directory_model"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
directory_model = "directory_model.cli:main"