[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "directory-model"
version = "0.1.0"
description = "directory_model is a Python package for both modeling and validating filesystem directory structures based on YAML schema definitions. It provides a class-based model for referencing paths, built on Python's Path package and Pydantic."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Michael Kane", email = "thisismikekane@gmail.com" }]
dependencies = [
    "pydantic>=1.10",
    "typer>=0.4.0",
    "rich",
    "PyYAML",
    "Jinja2",
    "python-dotenv",
    "loguru",
    "typing_extensions"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thisismikekane/directory-model"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
directory_model = "directory_model.cli:main"
